--- a/TestingSystem.DAL/TestingSystem.DAL.csproj
+++ b/TestingSystem.DAL/TestingSystem.DAL.csproj
@@ -59,12 +59,17 @@
     <Compile Include="Entities\AppUser.cs" />
     <Compile Include="Identity\AppRoleManager.cs" />
     <Compile Include="Identity\AppUserManager.cs" />
+    <Compile Include="Interfaces\IIdentityUnitOfWork.cs" />
+    <Compile Include="Interfaces\IRepository\IRepository.cs" />
+    <Compile Include="Interfaces\IRepository\IRoleRepository.cs" />
+    <Compile Include="Interfaces\IRepository\IUserRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\Base\BaseRepository.cs" />
+    <Compile Include="Repositories\IdentityUnitOfWork.cs" />
+    <Compile Include="Repositories\RoleRepository.cs" />
+    <Compile Include="Repositories\UserRepository.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Interfaces\" />
-    <Folder Include="Repositories\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
