--- a/TestingSystem.BLL/packages.config
+++ b/TestingSystem.BLL/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EntityFramework" version="6.1.0" targetFramework="net47" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net47" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net47" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net47" />
+  <package id="Ninject" version="3.3.4" targetFramework="net47" />
+  <package id="Ninject.Web.Common" version="3.3.0" targetFramework="net47" />
 </packages>
