--- a/TestingSystem.WEB/packages.config
+++ b/TestingSystem.WEB/packages.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net47" />
-  <package id="bootstrap" version="3.0.0" targetFramework="net47" />
+  <package id="bootstrap" version="4.1.1" targetFramework="net47" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net47" />
-  <package id="jQuery" version="1.10.2" targetFramework="net47" />
+  <package id="jQuery" version="3.0.0" targetFramework="net47" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net47" />
   <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net47" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.6" targetFramework="net47" />
@@ -34,6 +34,7 @@
   <package id="Ninject.Web.Common" version="3.3.0" targetFramework="net47" />
   <package id="Ninject.Web.Common.WebHost" version="3.3.0" targetFramework="net47" />
   <package id="Owin" version="1.0" targetFramework="net47" />
+  <package id="popper.js" version="1.14.0" targetFramework="net47" />
   <package id="Respond" version="1.2.0" targetFramework="net47" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net47" />
   <package id="WebGrease" version="1.5.2" targetFramework="net47" />
