--- a/TestingSystem.DAL/TestingSystem.DAL.csproj
+++ b/TestingSystem.DAL/TestingSystem.DAL.csproj
@@ -78,6 +78,10 @@
     <Compile Include="Migrations\201805181539078_Initial.Designer.cs">
       <DependentUpon>201805181539078_Initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201805181819456_AddTestQuestionAnswer.cs" />
+    <Compile Include="Migrations\201805181819456_AddTestQuestionAnswer.Designer.cs">
+      <DependentUpon>201805181819456_AddTestQuestionAnswer.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\AnswerRepository.cs" />
@@ -95,6 +99,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201805181539078_Initial.resx">
       <DependentUpon>201805181539078_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201805181819456_AddTestQuestionAnswer.resx">
+      <DependentUpon>201805181819456_AddTestQuestionAnswer.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
