--- a/TestingSystem.DAL/TestingSystem.DAL.csproj
+++ b/TestingSystem.DAL/TestingSystem.DAL.csproj
@@ -59,15 +59,19 @@
     <Compile Include="Entities\AppRole.cs" />
     <Compile Include="Entities\AppUser.cs" />
     <Compile Include="Entities\Question.cs" />
+    <Compile Include="Entities\QuestionResult.cs" />
     <Compile Include="Entities\Test.cs" />
+    <Compile Include="Entities\TestResult.cs" />
     <Compile Include="Identity\AppRoleManager.cs" />
     <Compile Include="Identity\AppUserManager.cs" />
     <Compile Include="Interfaces\IIdentityUnitOfWork.cs" />
     <Compile Include="Interfaces\IRepository\IAnswerRepository.cs" />
     <Compile Include="Interfaces\IRepository\IQuestionRepository.cs" />
+    <Compile Include="Interfaces\IRepository\IQuestionResultRepository.cs" />
     <Compile Include="Interfaces\IRepository\IRepository.cs" />
     <Compile Include="Interfaces\IRepository\IRoleRepository.cs" />
     <Compile Include="Interfaces\IRepository\ITestRepository.cs" />
+    <Compile Include="Interfaces\IRepository\ITestResultRepository.cs" />
     <Compile Include="Interfaces\IRepository\IUserRepository.cs" />
     <Compile Include="Interfaces\ITestUnitOfWork.cs" />
     <Compile Include="Migrations\201805170640168_InitialCreate.cs" />
@@ -82,14 +86,20 @@
     <Compile Include="Migrations\201805181819456_AddTestQuestionAnswer.Designer.cs">
       <DependentUpon>201805181819456_AddTestQuestionAnswer.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201805191755228_AddTestResult.cs" />
+    <Compile Include="Migrations\201805191755228_AddTestResult.Designer.cs">
+      <DependentUpon>201805191755228_AddTestResult.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\AnswerRepository.cs" />
     <Compile Include="Repositories\Base\BaseRepository.cs" />
     <Compile Include="Repositories\IdentityUnitOfWork.cs" />
     <Compile Include="Repositories\QuestionRepository.cs" />
+    <Compile Include="Repositories\QuestionResultRepository.cs" />
     <Compile Include="Repositories\RoleRepository.cs" />
     <Compile Include="Repositories\TestRepository.cs" />
+    <Compile Include="Repositories\TestResultRepository.cs" />
     <Compile Include="Repositories\TestUnitOfWork.cs" />
     <Compile Include="Repositories\UserRepository.cs" />
   </ItemGroup>
@@ -102,6 +112,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201805181819456_AddTestQuestionAnswer.resx">
       <DependentUpon>201805181819456_AddTestQuestionAnswer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201805191755228_AddTestResult.resx">
+      <DependentUpon>201805191755228_AddTestResult.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
