--- a/TestingSystem.WEB/Web.config
+++ b/TestingSystem.WEB/Web.config
@@ -24,6 +24,14 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
   </system.web>
+  <system.webServer>
+    <httpErrors errorMode="Custom" existingResponse="Replace">
+      <clear/>
+      <error statusCode="404" path="/Error/NotFound" responseMode="ExecuteURL"/>
+      <error statusCode="403" path="/Error/Forbidden" responseMode="ExecuteURL"/>
+      <error statusCode="400" path="/Error/BadRequest" responseMode="ExecuteURL"/>
+    </httpErrors>
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
